@@ -19,7 +19,9 @@
     - add .travis.yml (https://travis-ci.org)
     - test case for RT #53966 - disallow filenames with ~ char
     - test case for RT #55166 - calling Vars to get the filename does not return
-      a filehandle, so this cannot be used in the call to uploadinfo
+      a filehandle, so this cannot be used in the call to uploadinfo, also
+      update documentation for the uploadInfo to show that ->Vars should not be
+      used to get the filename for this method
 
 4.03 2014-07-02
 
